fix velovit collapse menu

--- a/css/main.css
+++ b/css/main.css
@@ -297,7 +297,7 @@ header {
   width: 100%;
   top: 0;
   left: 0;
-  padding: 20px 0% 10px 0%;
+  padding: 25px 4% 10px 4%;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -314,7 +314,7 @@ header.sticky2 {
 }
 
 header .logo {
-  width: 180px;
+  width: 220px;
   height: 30px;
   margin-left: 20%;
 }
@@ -360,7 +360,7 @@ header ul li a:hover {
   left: 0;
   background-color: #f3da4b;
   transform-origin: bottom right;
-  transition: transform 0.25s ease-out;
+  transition: transform 0.4s ease-out;
 }
 
 .underline-animation:hover:after {
@@ -408,6 +408,9 @@ ul li.active a {
   position: absolute;
   background-size: cover;
 }
+
+
+
 
 @media (min-aspect-ratio: 16/9) {
   .back-particles{
@@ -464,16 +467,16 @@ input[type="checkbox"]{
 
 @media (min-width: 845px){
   header{
-    padding: 20px 0% 10px 4%;
+    padding: 20px 4% 10px 4%;
   }
   
 
   header .logo {
-    margin-left: 0;
+    margin-left: 1%;
   }
 
   header ul {
-    margin-right: 0;
+    margin-right: 1%;
   }
 }
 
@@ -502,9 +505,11 @@ input[type="checkbox"]{
     width: 80%;
     text-align: center;
     display: block;
-    transition: all 0.5s ease;
+    transition: all 0.8s ease-in-out;
     overflow: visible !important;
   }
+
+  
 
   header.sticky {
     padding: 15px 50px;
@@ -522,22 +527,29 @@ input[type="checkbox"]{
   }
 
   .fas {
-    color: #fede28;
+    color: #fff;
   }
+ 
   
   header ul li{
     width: 100%;
     margin: 40px 0;
   }
+
+
   header ul li a{
     width: 100%;
     margin-left: -100%;
     display: block;
     font-size: 20px;
-    transition: 0.1s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    transition: 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
   }
   #click:checked ~ ul li a{
     margin-left: 0px;
+  }
+
+  .underline-animation:after {
+    width: 0%;
   }
 
   * {
@@ -583,14 +595,21 @@ input[type="checkbox"]{
 
 
 
+
+
+
+
+
+
+
 .footer {
-  padding: 40px;
+  padding: 15px;
   background-image: linear-gradient(to bottom, #141414, #141414, #131313, #131313, #121212);
 }
 
 .footer .social {
   text-align: center;
-  padding-bottom: 25px;
+  padding-bottom: 10px;
   color: #fff;
 }
 
